link change, remove old files

--- a/README.adoc
+++ b/README.adoc
@@ -25,7 +25,7 @@ The database holds all information of registered users.
 == HTTP API
 The API is documented as https://git.thm.de/microservicesss21/orga/-/tree/master/doc/apis[OpenAPI Specification]
 
-To test the API please use the https://git.thm.de/microservicesss21/orga/-/blob/master/doc/Micro-Services.project_service.postman_collection.json[Postman collection].
+To test the API please use the https://git.thm.de/microservicesss21/orga/-/blob/master/doc/apis/Micro-Services.postman_collection.json[Postman collection].
 
 == Message-Broker / ActiveMQ
 The service sends events when:
